# dutch_tax_agent

./: .env.example  .gitignore  HITL_COMPLETE.md  QUICKSTART.md  README.md  check_checkpointing.py  pyproject.toml
docs/: Dutch Tax Calculation Box 1 & 3.md  INCREMENTAL_PROCESSING.md  QUICKSTART.md  QUICK_REFERENCE.md  architecture.md  checkpointing.md  execution_flow.md  hitl_workflow.md
sample_docs/: README.md
src/dutch_tax_agent/: README.md  __init__.py  agent.py  checkpoint_utils.py  cli.py  config.py  display_utils.py  document_manager.py  llm_factory.py  main.py  session_manager.py
src/dutch_tax_agent/box3/: __init__.py
src/dutch_tax_agent/data/: box3_rates_2022_2025.json  ecb_rates_cache.json  pii_addresses.json.example  pii_names.json.example
src/dutch_tax_agent/graph/: __init__.py  main_graph.py
src/dutch_tax_agent/graph/agents/: __init__.py  dutch_parser.py  investment_broker_parser.py  revolut_parser.py  salary_parser.py  us_broker_parser.py
src/dutch_tax_agent/graph/nodes/: __init__.py  aggregator.py  dispatcher.py  hitl_control.py  reducer.py  validators.py
src/dutch_tax_agent/graph/nodes/box3/: __init__.py  actual_return.py  comparison.py  fictional_yield.py  optimization.py  start_box3.py  statutory_calculation.py
src/dutch_tax_agent/ingestion/: __init__.py  csv_parser.py  pdf_parser.py  pii_scrubber.py
src/dutch_tax_agent/ingestion/recognizers/: __init__.py  address_recognizer.py  bsn_recognizer.py  dob_recognizer.py  dutch_address_recognizer.py  iban_recognizer.py  name_recognizer.py
src/dutch_tax_agent/schemas/: __init__.py  documents.py  state.py  tax_entities.py
src/dutch_tax_agent/tools/: __init__.py  currency.py  data_validator.py  date_utils.py  tax_credits.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_graph_flow.py
tests/unit/: test_box3_calculations.py  test_bsn_recognizer.py  test_checkpointing.py  test_currency_converter.py  test_document_manager.py  test_hitl_components.py  test_session_manager.py
